# retention

./: .gitignore  .pylintrc  HEARTBEAT.md  IDENTITY.md  MEMORY.md  README.md  TOOLS.md  USER.md  auto_tuning_optimizer.py  config.py  config.toml  config.yaml  config_small.toml  consolidate.py  dataset.py  feedback_capture.py  integrate_transformer.py  learning_topics.json  learning_topics_manager.py  log_config.py  loss.py  main.py  memory_consolidator.py  memory_dataset.py  memory_deduplicator.py  model.py  multimodal_memory_manager.py  pyproject.toml  pytest.ini  realtime_compressor.py  requirements.txt  retention_daily.py  run.py  run_consolidation.py  server.py  shared_memory_connector.py  simple_memory_transformer.py  test_runner.py  tokenizer.py  train.py  (+4 more)
.github/workflows/: pylint.yml
arch/: classifier.py  embedding.py  feed_forward.py  positional_encoding.py  residual_add_norm.py
arch/attentions/: __init__.py  cross.py  multi_head_attention.py  multihead.py  retention.py  self.py
arch/decoder/: layer.py  model.py
arch/encoder/: encoder_block.py  layer.py  model.py
experiments/: Dataset.ipynb  Transformers.ipynb
experiments/.ipynb_checkpoints/: Transformers-checkpoint.ipynb
haci_cognitive/: __init__.py  active_learning_scheduler.py  cognitive_integrator.py  cognitive_net.py  cognitive_state_manager.py  cognitive_trainer.py  cognitive_watcher.py  curiosity_engine.py  dream_scheduler.py  dreaming_loop.py  extract_conversations.py  health_check.py  main.py  memory_clusterer.py  meta_learner.py  negative_learner.py  predictive_coding.py  self_evolution.py  self_supervised_loop.py  sensory_interface.py  social_trainer.py  weekly_report.py  world_model.py  world_model_sync.py  world_model_v2.py
notebooks/: Transformers.ipynb
tests/: README.md  __init__.py  conftest.py  test_retention.py  test_transformer.py
tokenizer/: sentencepiece.py  tokenizer.py  word.py
transformer/: attention.py  embedding.py  encoder.py  feed_forward.py  model_encoder.py  positional_encoding.py  residual_add_norm.py
transformer/attentions/: cross.py  (+2 more)
(+4 files in other folders)
