[project]
name = "Attention-is-all-you-need"
version = "0.1.0"
description = "Implementation of Transformer in Scratch"
requires-python = ">=3.13"
dependencies = [
    "tqdm",
    'torch',
    'datasets',
    'tiktoken',
    'python-box',
    'click',
    'codetiming',
    "jupyter>=1.1.1",
    "sentencepiece",
    "psutil",
]

[project.optional-dependencies]
dev = [
    "ipython>=9.4.0",
    "jupyter",
]

[tool.setuptools]
packages = ["transformer"]
